fe/src/parse.c
#include "tcmm.h"

#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>
#include <stdio.h>
#include <stdarg.h>
#include <assert.h>

typedef struct _Parser {
  LitPool* lpool;
  Lexer    lexer;
  MPool*    pool;
  const char* err;
  int      lp_cnt;

	NodeFunc* nf; // currently parsing NodeFunc node
} Parser;

#define GRAB(XX) (MPoolGrab((p->pool),sizeof(XX)))
#define L(XX)    (&((XX)->lexer))
#define LEX(XX)  (&(L(XX)->lexeme))
#define NEXT(P)  LexerNext(L(P))

#define EXPECTR(P,TK,STMT)                                               \
  do {                                                                   \
    if((TK) != LEX(P)->tk) {                                             \
      ParserError((P),"expect token %s", TokenGetStr(LEX(p)->tk));       \
      STMT;                                                              \
    }                                                                    \
    NEXT(P);                                                             \
  } while(0)

#define EXPECT(P,TK) EXPECTR(P,TK,return NULL)

static void ParserError( Parser* p , const char* fmt , ... ) {
  char buf[1024];
  va_list vl;
  va_start(vl,fmt);
  vsnprintf(buf,1024,fmt,vl);
  p->err = ReportError(p->pool,"parser",L(p)->src,L(p)->pos,L(p)->nline,L(p)->nchar,buf);
}

static void ParserInit( Parser* p , LitPool* lpool , MPool* mpool , const char* src ) {
  p->lpool = lpool;
  p->pool  = mpool;
	p->lp_cnt= 0;
  p->err   = NULL;

  LexerInit(&(p->lexer),lpool,mpool,src);
  LexerNext(&(p->lexer)); // fire the lexer
}

static void ParserDelete( Parser* p ) {
  LexerDelete(&(p->lexer));
}

/** ------------------------------------------------
 * Expression Parsing
 * ------------------------------------------------*/
static Node* ParseExpr   ( Parser* );
static Node* ParseTernary( Parser* );
static Node* ParseBinary ( Parser* );
static Node* ParseUnary  ( Parser* );
static Node* ParsePrefix ( Parser* );
static Node* ParsePrimary( Parser* );

static inline void NodeDbg0( Parser* p , Node* n ) {
  n->dbg_start = L(p)->pos - LEX(p)->tk_sz;
  n->dbg_end   = L(p)->pos;
}

static inline int _IsPrefixOp( Token tk ) {
  return tk == TK_DOT || tk == TK_LSQR || tk == TK_LPAR;
}

static inline int _IsUnaryOp( Token tk ) {
  return tk == TK_NOT || tk == TK_SUB;
}

static Node* ParseStruLit( Parser* p , LitIdx name ) {
  NodeStruLit* slit;
  size_t pos_start = L(p)->pos;

  NEXT(p); // skip {

  // create the NodeStruLit object
  slit = GRAB(NodeStruLit);
  slit->base.type      = ENT_STRULIT;
  slit->base.dbg_start = pos_start;

  slit->name   = name;
  slit->ctype  = NULL;
  slit->assign = NULL;

  // parsing struct literal field
  if(LEX(p)->tk == TK_RBRA) {
    NEXT(p);
  } else {
    do {
      NodeStruLitAssign* field = NULL;

      EXPECT(p,TK_DOT); // expect a dot
      if(LEX(p)->tk != TK_ID) {
        ParserError(p,"expect a ID to indicate field name of struct");
        return NULL;
      }

      field = GRAB(NodeStruLitAssign);

      // NOTES: the order of the assign is actually
      //        been chained in reverse order
      field->next = slit->assign;
      slit->assign= field;
      field->ctype= NULL;
      field->name = LEX(p)->lit;
      NEXT(p);             // skip ID
      EXPECT(p,TK_ASSIGN); // skip =
      if(!(field->value = ParseExpr(p))) return NULL;
      switch(LEX(p)->tk) {
        case TK_COMMA:
          NEXT(p);
          break;
        case TK_RBRA:
          NEXT(p);
          goto done;
        default:
          ParserError(p,"expect a \",\" or \"}\" in struct literal");
          return NULL;
      }
    } while(1);
  }

done:
  slit->base.dbg_end = L(p)->pos;
  return (Node*)slit;
}

static Node* ParsePrimary( Parser* p ) {
  switch(LEX(p)->tk) {
    case TK_LIT_INT:
    case TK_LIT_DBL:
    case TK_LIT_STR:
    case TK_LIT_CHAR:
    case TK_LIT_TRUE:
    case TK_LIT_FALSE:
      {
        NodeLit* n = GRAB(NodeLit);
        n->base.type = ENT_LIT;
        NodeDbg0(p,(Node*)n);
        n->ctype = NULL;
        if(LEX(p)->tk == TK_LIT_TRUE || LEX(p)->tk == TK_LIT_FALSE) {
          n->lit = LEX(p)->tk == TK_LIT_TRUE ? LitPoolGetTrue(p->lpool) : LitPoolGetFalse(p->lpool);
        } else {
          n->lit =  LEX(p)->lit;
        }
        NEXT(p);
        return (Node*)n;
      }
    case TK_LPAR:
      {
        Node* n;
        size_t dbg_start = L(p)->pos;

        NEXT(p);
        if(!(n = ParseExpr(p)))
          return NULL;
        EXPECT(p,TK_RPAR);

        // adjust debug info to include the "(" and ")"
        n->dbg_start = dbg_start;
        n->dbg_end   = L(p)->pos;
        return (Node*)n;
      }

    case TK_ID:
      {
        NodeId* n = GRAB(NodeId);
        n->base.type = ENT_ID;

        NodeDbg0(p,(Node*)n);
        n->name = LEX(p)->lit;
        NEXT(p);
        return (Node*)n;
      }

    default:
      ParserError(p,"expect a valid primary expression , eg literal or subexpression");
      return NULL;
  }
}

static Node* ParseCall( Parser* p , Node* pp ) {
  size_t dbg_start = L(p)->pos;

  NodeCall* c = GRAB(NodeCall);
  c->lhs            = pp;
  c->base.dbg_start = dbg_start;
  c->base.type      = ENT_CALL;
  c->arg.sz         = 0;
  NEXT(p); // skip (

  if(LEX(p)->tk == TK_RPAR) {
    NEXT(p);
  } else {
    size_t pos = 0;

    do {
      Node* e;
      if(pos == CONFIG_MAX_CALL_ARGS) {
        ParserError(p,"too many arguments for function call, more than %d",CONFIG_MAX_CALL_ARGS);
        return NULL;
      }

      if(!(e = ParseExpr(p))) return NULL;
      c->arg.args[pos++] = e;

      switch(LEX(p)->tk) {
        case TK_COMMA:
          NEXT(p);
          break;
        case TK_RPAR:
          NEXT(p);
          c->arg.sz = pos;
          goto done;
        default:
          ParserError(p,"expect a \",\" or \")\" here");
          break;
      }
    } while(1);
  }

done:
  c->base.dbg_end = L(p)->pos;
  return (Node*)c;
}

static Node* ParsePrefix( Parser* p ) {
  Node* pexpr = ParsePrimary(p);
  if(!pexpr) return NULL;

  if(pexpr->type == ENT_ID && _IsPrefixOp(LEX(p)->tk)) {
    Node* cur = pexpr;
    /**
     * now at here, we meet a ID which is a possible start of a prefix
     * expression.
     */
    for( ;; ) {
      switch(LEX(p)->tk) {
        case TK_DOT:
          {
            NodeDot* dot;
            size_t dbg_start = L(p)->pos;

            NEXT(p); // skip .
            if(LEX(p)->tk != TK_ID) {
              ParserError(p,"expect a ID here");
              return NULL;
            }

            dot = GRAB(NodeDot);
            dot->base.dbg_start = dbg_start;
            dot->base.type      = ENT_DOT;
            dot->name           = LEX(p)->lit;
            dot->lhs            = cur;
            NEXT(p);
            dot->base.dbg_end   = L(p)->pos;
            cur                 = (Node*)dot;
          }
          break;
        case TK_LSQR:
          {
            NodeIndex* idx;
            size_t dbg_start = L(p)->pos;
            idx = GRAB(NodeIndex);
            idx->base.dbg_start = dbg_start;
            idx->base.type      = ENT_INDEX;
            idx->lhs            = cur;
            NEXT(p); // skip [
            if(!(idx->rhs= ParseExpr(p))) return NULL;
            EXPECT(p,TK_RSQR);

            idx->base.dbg_end   = L(p)->pos;
            cur = (Node*)idx;
          }
          break;
        case TK_LPAR:
          if(!(cur = ParseCall(p,cur)))  return NULL;
          break;
        default:
          goto done;
      }
    }

done:
    return cur;
  }

  return pexpr;
}

static Node* ParseUnary( Parser* p ) {
  size_t dbg_start = L(p)->pos;

  if(_IsUnaryOp(LEX(p)->tk)) {
    Token op = LEX(p)->tk;
    Node* opr;
    NodeUnary* una;
    NEXT(p);
    if(!(opr = ParseUnary(p))) return NULL;

    una = GRAB(NodeUnary);
    una->base.dbg_start = dbg_start;
    una->base.dbg_end   = L(p)->pos;
    una->base.type      = ENT_UNARY;
    una->opr = opr;
    una->op  = op;
    una->ctype = NULL;
    return (Node*)una;
  }
  return ParsePrefix(p);
}

/**
 * Binary parser , precedence climbing style
 */

static inline int _GetBinOpPrec( Token tk ) {
  switch(tk) {
    case TK_MUL:
    case TK_DIV:
    case TK_MOD:
      return 1;
    case TK_ADD:
    case TK_SUB:
      return 2;
    case TK_LT :
    case TK_LE :
    case TK_GT :
    case TK_GE :
      return 3;
    case TK_EQ :
    case TK_NE :
      return 4;
    case TK_AND:
      return 5;
    case TK_OR:
      return 6;
    default:
      return -1;
  }
}

static inline int _GetBinOpMaxPrec() { return 6; }

static Node* _ParseBin( Parser* p , int prec ) {
  if(prec == 0)
    return ParseUnary(p);
  else {
    size_t dbg_start = L(p)->pos;
    Node* lhs;
    Node* rhs;
    int cp;

    if(!(lhs = _ParseBin(p,prec-1)))
      return NULL;

    for( ;; ) {
      if((cp = _GetBinOpPrec(LEX(p)->tk)) <0)
        return lhs;
      if(cp == prec) {
        int op = LEX(p)->tk;
        NodeBinary* bin;

        NEXT(p);
        if(!(rhs = _ParseBin(p,prec-1)))
          return NULL;

        bin                 = GRAB(NodeBinary);
        bin->base.type      = ENT_BINARY;
        bin->base.dbg_start = dbg_start;
        bin->lhs            = lhs;
        bin->rhs            = rhs;
        bin->op             = op;
        bin->ctype          = NULL;
        lhs                 = (Node*)bin;
      } else {
        assert(prec < cp);
        goto done;
      }
    }

done:
    return lhs;
  }
}

static Node* ParseBinary( Parser* p ) {
  return _ParseBin(p,_GetBinOpMaxPrec());
}

static Node* ParseTernary( Parser* p ) {
  size_t dbg_start = L(p)->pos;
  Node* f = ParseBinary(p);
  if(!f) return NULL;

  if(LEX(p)->tk == TK_QUESTION) {
    NodeTernary* ten;
    Node* cond;
    Node* trd ;

    NEXT(p);
    if(!(cond = ParseBinary(p)))
      return NULL;

    EXPECT(p,TK_COLON);

    if(!(trd  = ParseBinary(p)))
      return NULL;

    ten = GRAB(NodeTernary);
    ten->base.type      = ENT_TERNARY;
    ten->base.dbg_start = dbg_start;
    ten->base.dbg_end   = L(p)->pos;
    ten->first = f;
    ten->second= cond;
    ten->third = trd;
    ten->ctype = NULL;

    return (Node*)ten;
  }
  return f;
}

static Node* ParseExpr( Parser* p ) { return ParseTernary(p); }

/** ----------------------------------------------------------------
 * Statment
 * ----------------------------------------------------------------*/
// Parse a declaration. A declaration is something as following :
// type id array-modifier
static int ParseVDec( Parser* , TypeInfo* , LitIdx* ref );

static CodeChunk* ParseChunk       ( Parser* );
static CodeChunk* ParseChunkOrSStmt( Parser* );

static Node* ParseLocal       ( Parser* );
static Node* ParseCallOrAssign( Parser* , Token );
static Node* ParseIf          ( Parser* );
static Node* ParseFor         ( Parser* );
static Node* ParseContinue    ( Parser* );
static Node* ParseBreak       ( Parser* );
static Node* ParseReturn      ( Parser* );
static Node* ParseStmt        ( Parser* );

static void CodeChunkAddStmt( Parser* p , CodeChunk* ck , Node* stmt ) {
  if(ck->cap == ck->sz) {
    size_t ncap = ck->cap ? ck->cap * 2 : 16;
    ck->stmt    = MPoolRealloc(p->pool,ck->stmt,sizeof(Node*)*ck->sz,sizeof(Node*)*ncap);
    ck->cap     = ncap;
  }
  ck->stmt[ck->sz++] = stmt;
}

static int ParseArr( Parser* p , const TypeInfo* mt , TypeInfo* o ) {
  LitIdx len_idx;
  TypeInfo tmp;

  NEXT(p); // skip [
  if(LEX(p)->tk != TK_LIT_INT) {
    ParserError(p,"expect a int to be used as index of array");
    return -1;
  }

  len_idx = LEX(p)->lit;

  NEXT(p);
  EXPECTR(p,TK_RSQR,return -1);

  o->type          = ET_ARR;
  o->extra.arr.len = LitPoolInt(p->lpool,len_idx);
  o->extra.arr.t   = GRAB(TypeInfo);

  if(o->extra.arr.len == 0) {
    ParserError(p,"the size of the array must be larger than 0");
    return -1;
  }

  if(LEX(p)->tk == TK_LSQR) {
    if(ParseArr(p,mt,&tmp)) return -1;
    *o->extra.arr.t  = tmp;
  } else {
    *o->extra.arr.t  = *mt;
  }

  return 0;
}

static int ParseVDecWithType( Parser* p , const TypeInfo* mt , TypeInfo* tinfo , LitIdx* ref ) {
  if(LEX(p)->tk != TK_ID) {
    ParserError(p,"expect a ID name after the type");
    return -1;
  }

  *ref = LEX(p)->lit;
  NEXT(p); // skip the name

  if(LEX(p)->tk == TK_LSQR) {
    if(ParseArr(p,mt,tinfo)) return -1;
  } else {
    *tinfo = *mt;
  }

  return 0;
}

static int ParseVDec( Parser* p , TypeInfo* tinfo , LitIdx* ref ) {
  TypeInfo mt;

  switch(LEX(p)->tk) {
    case TK_INT:
      mt.type = EPT_INT;
      break;
    case TK_DBL:
      mt.type = EPT_DBL;
      break;
    case TK_BOOL:
      mt.type = EPT_BOOL;
      break;
    case TK_CHAR:
      mt.type = EPT_CHAR;
      break;
    case TK_STR:
      mt.type = ET_STR;
      break;
    case TK_STRUCT:
      {
        NEXT(p);
        if(LEX(p)->tk != TK_ID) {
          ParserError(p,"expect a ID name after the struct");
          return -1;
        }
        mt.type = ET_STRUCT;
        mt.extra.name = LEX(p)->lit;
      }
      break;
    case TK_VOID:
      ParserError(p,"void type cannot be used for declare variable");
      return -1;
    default:
      ParserError(p,"unknown token here, expect a type specifier");
      return -1;
  }

  NEXT(p); // skip the whole type name

  return ParseVDecWithType(p,&mt,tinfo,ref);
}

static Node* ParseDefineRHS( Parser* p , const TypeInfo* tinfo ) {
  if(tinfo->type == ET_STRUCT && LEX(p)->tk == TK_LBRA) {
    return ParseStruLit(p,tinfo->extra.name);
  } else {
    return ParseExpr(p);
  }
}

// Parsing local variable definition or declaration.
// lvar := def | dec
// def  := type id array-modifier ';'
// dec  := type id array-modifier '=' expr ';'
static Node* ParseLocal( Parser* p ) {
  LitIdx      vid;
  size_t      dbg_start = L(p)->pos;
  NodeLocal*  l;

  l = GRAB(NodeLocal);

  if(ParseVDec(p,&(l->tinfo),&vid)) return NULL;


  l->base.type      = ENT_LOCAL;
  l->base.dbg_start = dbg_start;
  l->base.dbg_end   = L(p)->pos;
  l->name           = vid;
  l->rhs            = NULL;

  // now check whether there's trailing assignment or not
  if(LEX(p)->tk == TK_ASSIGN) {
    NEXT(p); // skip =
    if(!(l->rhs = ParseDefineRHS(p,&l->tinfo)))
      return NULL;
  }

  EXPECT(p,TK_SEMICOLON); // skip ;
  return (Node*)l;
}

static int IsNodeLHS( Node* n ) {
  switch(n->type) {
    case ENT_ID:
    case ENT_CALL:
      return 1;
    default:
      return 0;
  }
}

static int IsAssignOp( Token tk ) {
  return tk == TK_ASSIGN ||
         tk == TK_SADD   ||
         tk == TK_SSUB   ||
         tk == TK_SMUL   ||
         tk == TK_SDIV;
}

static Node* ParseCallOrAssign( Parser* p , Token delim ) {
  size_t dbg_start = L(p)->pos;

  Node* lhs = ParseExpr(p); // try to parse if as a lhs expression
  if(!lhs) return NULL;

  if(IsAssignOp(LEX(p)->tk)) {
    NodeAssign* n;
    Node*     rhs;
    Token      op = LEX(p)->tk;

    if(!IsNodeLHS(lhs)) {
      ParserError(p,"not valid left hand side, cannot be used as assignment");
      return NULL;
    }

    NEXT(p); // skip assignment token
    if(!(rhs = ParseExpr(p)))
      return NULL;
    EXPECT(p,delim);

    n = GRAB(NodeAssign);

    n->base.type = ENT_ASSIGN;
    n->base.dbg_start = dbg_start;
    n->base.dbg_end   = L(p)->pos;
    n->lhs            = lhs;
    n->rhs            = rhs;
    n->op             = op;

    return (Node*)n;
  } else {
    // now this statement *must* be a call otherwise it is not allowed
    if(lhs->type == ENT_CALL) {
      return lhs;
    }
  }

  ParserError(p,"meaningless statement, expect a call or a assignment");
  return NULL;
}

static int ParseBranch( Parser* p , NodeIf* n , int is_else ) {
  Node* cond = NULL;
  NodeIfBranch* if_br;

  if(!is_else) {
    // try to parse the condition
    if(LEX(p)->tk == TK_LPAR) {
      NEXT(p);
      if(!(cond = ParseExpr(p))) return -1;
      EXPECTR(p,TK_RPAR,return -1);
    }
  }

  if(n->sz == n->cap) {
    size_t ncap = n->cap ? 2 * n->cap : 2;
    n->chains = MPoolRealloc(p->pool,n->chains,sizeof(NodeIfBranch)*n->sz,sizeof(NodeIfBranch)*ncap);
    n->cap    = ncap;
  }

  if_br = n->chains + n->sz++;
  if(!(if_br->chunk = ParseChunkOrSStmt(p)))
    return -1;
  if_br->cond = cond;

  return 0;
}

static Node* ParseIf( Parser* p ) {
  size_t dbg_start = L(p)->pos;
  NodeIf* n        = GRAB(NodeIf);

  n->base.type = ENT_IF;
  n->base.dbg_start = dbg_start;

  n->chains = NULL;
  n->sz     = 0;
  n->cap    = 0;

  // parse the leading if
  NEXT(p); // skip if
  if(ParseBranch(p,n,0))
    return NULL;

  // elif cluster
  while(LEX(p)->tk == TK_ELIF) {
    NEXT(p);
    if(ParseBranch(p,n,0)) return NULL;
  }

  // dangling else
  if(LEX(p)->tk == TK_ELSE) {
    NEXT(p);
    if(ParseBranch(p,n,1)) return NULL;
  }

  n->base.dbg_end = L(p)->pos;
  return (Node*)n;
}

// A short-stmt is a stmt that allows following stuff:
// 1. a normal statment that does *call* or assignment
// 2. a declaration/definition
static Node* ParseShortStmt( Parser* p ) {
  switch(LEX(p)->tk) {
    case TK_INT:
    case TK_DBL:
    case TK_VOID:
    case TK_CHAR:
    case TK_BOOL:
    case TK_STR:
    case TK_STRUCT:
      return ParseLocal(p);
    default:
      return ParseCallOrAssign(p,TK_SEMICOLON);
  }
}

static Node* ParseFor( Parser* p ) {
  size_t  dbg_start = L(p)->pos;
  NodeFor* ret;

  Node* init = NULL;
  Node* cond = NULL;
  Node* step = NULL;
  CodeChunk* ck = NULL;

  NEXT(p); EXPECT(p,TK_LPAR);

  // setup a new lexical scope
	++p->lp_cnt;

  // initialize stmt
  if(LEX(p)->tk == TK_SEMICOLON)
    NEXT(p);
  else {
    // this function eats the semicolon
    if(!(init = ParseShortStmt(p)))
      return NULL;
  }

  if(LEX(p)->tk == TK_SEMICOLON)
    NEXT(p);
  else {
    if(!(cond = ParseExpr(p))) return NULL;
    EXPECT(p,TK_SEMICOLON);
  }

  if(LEX(p)->tk == TK_RPAR)
    NEXT(p);
  else {
    if(!(step = ParseCallOrAssign(p,TK_RPAR))) return NULL;
  }

  if(!(ck = ParseChunkOrSStmt(p)))
    return NULL;

  ret = GRAB(NodeFor);
  ret->base.type = ENT_FOR;
  ret->base.dbg_start = dbg_start;
  ret->base.dbg_end   = L(p)->pos;

  ret->init = init;
  ret->cond = cond;
  ret->step = step;
  ret->chunk= ck;

	--p->lp_cnt;

  return (Node*)ret;
}

static Node* ParseContinue( Parser* p ) {
  NodeContinue* c;
  if(p->lp_cnt == 0) {
    ParserError(p,"cannot write continue statement in none-loop scope");
    return NULL;
  }
  c = GRAB(NodeContinue);
  c->base.type      = ENT_CONTINUE;
  c->base.dbg_start = L(p)->pos;

  NEXT(p); EXPECT(p,TK_SEMICOLON);
  c->base.dbg_end   = L(p)->pos;
  return (Node*)c;
}

static Node* ParseBreak( Parser* p ) {
  NodeBreak* b;
  if(p->lp_cnt == 0) {
    ParserError(p,"cannot write break statement in none-loop scope");
    return NULL;
  }

  b = GRAB(NodeBreak);
  b->base.type      = ENT_BREAK;
  b->base.dbg_start = L(p)->pos;

  NEXT(p); EXPECT(p,TK_SEMICOLON);

  b->base.dbg_end   = L(p)->pos;
  return (Node*)b;
}

static Node* ParseReturn( Parser* p ) {
  size_t dbg_start = L(p)->pos;
  NodeReturn* r;
  Node*       rv;

  NEXT(p); // skip return

  if(LEX(p)->tk != TK_SEMICOLON) {
    if(!(rv = ParseExpr(p)))
      return NULL;
  }

  EXPECT(p,TK_SEMICOLON);
  r = GRAB(NodeReturn);

  r->base.type      = ENT_RETURN;
  r->base.dbg_start = dbg_start;
  r->base.dbg_end   = L(p)->pos;
  r->expr           = rv;

  return (Node*)r;
}

static CodeChunk* ParseChunk( Parser* p ) {
  CodeChunk* ret;

  assert(LEX(p)->tk == TK_LBRA);
  NEXT(p);

  ret = GRAB(CodeChunk);
  ret->stmt = NULL;
  ret->sz   = 0;
  ret->cap  = 0;

  if(LEX(p)->tk != TK_RBRA) {
    for( ;; ) {
      Node* stmt = ParseStmt(p);
      if(!stmt) return NULL;
      CodeChunkAddStmt(p,ret,stmt);
      if(LEX(p)->tk == TK_RBRA) {
        break;
      }
    }
  }

  NEXT(p); // skip the }

  return ret;
}

static CodeChunk* ParseChunkOrSStmt( Parser* p ) {
  if(LEX(p)->tk == TK_LBRA) {
    return ParseChunk(p);
  } else {
    CodeChunk* ret = GRAB(CodeChunk);
    Node* stmt;

    if(!(stmt = ParseStmt(p)))
        return NULL;

    ret->stmt = MPoolGrab(p->pool,sizeof(Node*));
    ret->stmt[0] = stmt;
    ret->cap     = 1;
    ret->sz      = 1;

    return ret;
  }
}

static Node* ParseStmt( Parser* p ) {
  switch(LEX(p)->tk) {
    case TK_IF:
      return ParseIf(p);
    case TK_FOR:
      return ParseFor(p);
    case TK_CONTINUE:
      return ParseContinue(p);
    case TK_BREAK:
      return ParseBreak(p);
    case TK_RETURN:
      return ParseReturn(p);
    case TK_INT:
    case TK_DBL:
    case TK_VOID:
    case TK_CHAR:
    case TK_STR:
    case TK_BOOL:
    case TK_STRUCT:
      return ParseLocal(p);
    default:
      return ParseCallOrAssign(p,TK_SEMICOLON);
  }
}

static int ParseFuncArgList( Parser* p , NodeFunc* nf ) {
  NEXT(p); // skip (

  if(LEX(p)->tk == TK_RPAR) {
    NEXT(p);
  } else {
    for( ;; ) {
      NodeFuncArgDef* def;
      if(nf->arg_sz == nf->arg_cap) {
        size_t ncap = nf->arg_cap ? nf->arg_cap * 2 : 4;
        nf->arg     = MPoolRealloc(p->pool,nf->arg,sizeof(NodeFuncArgDef)*nf->arg_sz,
                                                   sizeof(NodeFuncArgDef)*ncap);
        nf->arg_cap = ncap;
      }

      def = nf->arg + nf->arg_sz++;

      if(nf->arg_sz == CONFIG_MAX_CALL_ARGS) {
        ParserError(p,"too many function arguments, only allowed %d",CONFIG_MAX_CALL_ARGS);
        return -1;
      }

      if(ParseVDec(p,&(def->tinfo),&(def->name))) return -1;

      switch(LEX(p)->tk) {
        case TK_COMMA:
          NEXT(p);
          break;
        case TK_RPAR:
          NEXT(p);
          goto done;
        default:
          ParserError(p,"expect \",\" or \")\" in argument list");
          return -1;
      }
    }
  }
done:
  return 0;
}

static Node* ParseFunc( Parser* p , size_t dbg_start , LitIdx fname , const TypeInfo* tinfo ) {
  assert(LEX(p)->tk == TK_LPAR);
  {
    NodeFunc* fnode = GRAB(NodeFunc);

    fnode                 = GRAB(NodeFunc);
    fnode->base.type      = ENT_FUNC;
    fnode->base.dbg_start = dbg_start;
    fnode->ctype          = NULL;
    fnode->name           = fname;

    fnode->arg            = NULL;
    fnode->arg_sz         = 0;
    fnode->arg_cap        = 0;
    fnode->rtype          = *tinfo;

    if(ParseFuncArgList(p,fnode)) return NULL;

    if(LEX(p)->tk != TK_LBRA) {
      ParserError(p,"expect a \"{\" to start a function body");
      return NULL;
    }

    if(!(fnode->chunk = ParseChunk(p)))
      return NULL;

    fnode->base.dbg_end   = L(p)->pos;
    return (Node*)fnode;
  }
}

static Node* ParseGlbVar( Parser* p , size_t dbg_start , LitIdx name , const TypeInfo* type ) {
  NodeGlobal* ret;
  Node*       val;
  NEXT(p); // skip the =
  if(!(val = ParseDefineRHS(p,type))) return NULL;
  EXPECT(p,TK_SEMICOLON);

  ret = GRAB(NodeGlobal);
  ret->base.type      = ENT_GLOBAL;
  ret->base.dbg_start = dbg_start;
  ret->base.dbg_end   = L(p)->pos;
  ret->value          = val;
  ret->tinfo          = *type;
  ret->ctype          = NULL;

  return (Node*)ret;
}

static Node* ParseGlbVarOrFunctionWithType( Parser* p , size_t dbg_start ,
                                                        LitIdx name,
                                                        const TypeInfo* type ) {
  if(LEX(p)->tk == TK_ASSIGN) {
    return ParseGlbVar(p,dbg_start,name,type);
  } else if(LEX(p)->tk == TK_LPAR) {
    // check whether it can be a function or not
    if(type->type == ET_ARR) {
      ParserError(p,"doesn't look like a function definition , neither looks like a global variable");
      return NULL;
    }
    return ParseFunc(p,dbg_start,name,type);
  }
  ParserError(p,"unknown global statement, you can define struct type, global variables or function "
                "in global scope");
  return NULL;
}

static Node* ParseGlbVarOrFunction( Parser* p ) {
  size_t      dbg_start = L(p)->pos;
  LitIdx      name;
  TypeInfo    t;
  if(ParseVDec(p,&t,&name))
    return NULL;
  return ParseGlbVarOrFunctionWithType(p,dbg_start,name,&t);
}

static Node* ParseStruct( Parser* p , LitIdx name ) {
  NodeStructDef* def = GRAB(NodeStructDef);
  def->base.type      = ENT_STRUCT_DEF;
  def->base.dbg_start = L(p)->pos;

  def->field = NULL;
  def->sz    = 0;
  def->cap   = 0;
  def->name  = name;
  NEXT(p);
  while(LEX(p)->tk != TK_RBRA) {
    NodeStructDefField* field;

    if(def->sz == def->cap) {
      size_t ncap = def->cap ? def->cap * 2 : 4;
      def->field  = MPoolRealloc(p->pool,def->field,sizeof(NodeStructDefField)*def->sz,
                                                    sizeof(NodeStructDefField)*ncap);
    }
    field = def->field + def->sz++;
    if(ParseVDec(p,&(field->tinfo),&(field->name)))
      return NULL;

    if(LEX(p)->tk == TK_SEMICOLON) {
      NEXT(p);
    } else {
      ParserError(p,"expect a \";\" or \"}\" in struct body");
      return NULL;
    }
  }

  NEXT(p); // skip the last }
  EXPECT(p,TK_SEMICOLON);

  def->base.dbg_end = L(p)->pos;
  return (Node*)def;
}

static Node* ParseStructOrGlbVar( Parser* p ) {
  size_t dbg_start = L(p)->pos;
  LitIdx name;
  NEXT(p);
  if(LEX(p)->tk != TK_ID) {
    ParserError(p,"expect an id after struct");
    return NULL;
  }
  name = LEX(p)->lit;
  NEXT(p);

  if(LEX(p)->tk == TK_LBRA) {
    return ParseStruct(p,name);
  } else if(LEX(p)->tk == TK_ID) {
    // try to parse it as a global variable assignment
    TypeInfo mt;
    TypeInfo ft;
    LitIdx   id;

    mt.type       = ET_STRUCT;
    mt.extra.name = name;

    if(ParseVDecWithType(p,&mt,&ft,&id))
      return NULL;
    return ParseGlbVarOrFunctionWithType(p,dbg_start,id,&ft);
  }

  ParserError(p,"unknown global scope statement");
  return NULL;
}

static NodeFile* ParseFile( Parser* p ) {
  Node* stmt;
  NodeFile* all       = GRAB(NodeFile);
  all->base.type      = ENT_FILE;
  all->base.dbg_start = L(p)->pos;
  all->chunk          = GRAB(CodeChunk);
  all->chunk->stmt    = NULL;
  all->chunk->sz      = 0;
  all->chunk->cap     = 0;
